--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav cl-effect-18" id="cl-effect-18">
 							<li class="act"><a href="index.html" class="effect1 active">Home</a></li>
-							<li><a href="events.html">Current events</a></li>
-							<li><a href="breaking.html">Breaking stories</a></li>
-							<li><a href="entertainment.html">Entertainment</a></li>
+							<li><a href="events.html">News</a></li>
+							<li><a href="breaking.html">Twitter</a></li>
+							<li><a href="entertainment.html">Analysis</a></li>
+                                                        <li><a href="about.html">About</a></li>
 							<li role="presentation" class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 								  Business <span class="caret"></span>
