--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 					  </button>
 						<div class="logo">
-							<a class="navbar-brand" href="index.html"><span>N</span> News Times</a>
+							<a class="navbar-brand" href="index.html"><span>N</span> Test</a>
 						</div>
 					</div>
 
