--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="breaking.html">Twitter</a></li>
 							<li><a href="entertainment.html">Analysis</a></li>
                                                         <li><a href="about.html">About</a></li>
-							<li role="presentation" class="dropdown">
+							<!-- <li role="presentation" class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 								  Business <span class="caret"></span>
 								</a>
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								  <li><a href="short-codes.html">Reviews</a></li>
 								  <li><a href="short-codes.html">Stock</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</div><!-- /.navbar-collapse -->	
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li>
 								<div class="banner-info-slider">
 									<ul>
-										<li><a href="single.html">politics</a></li>
+										<li><a href="single.html">トレード</a></li>
 										<li>25 Dec 2015</li>
 									</ul>
 									<h1>The Hunters breaking an Ebola ban on Bushmeat</h1>
@@ -109,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li>
 								<div class="banner-info-slider">
 									<ul>
-										<li><a href="single.html">Business</a></li>
+										<li><a href="single.html">契約</a></li>
 										<li>25 Dec 2015</li>
 									</ul>
 									<h1>magna perspiciatis unde omnis iste natus errors</h1>
