--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li><a href="single.html">トレード</a></li>
 										<li>25 Dec 2015</li>
 									</ul>
-									<h1>The Hunters breaking an Ebola ban on Bushmeat</h1>
-									<p>Ebola is a viral illness of which the initial 
-									symptoms can include a sudden fever, intense weakness, 
-									muscle pain and a sore throat.<span>By <i>ullamcoman</i> and <i>Micheal smithjos.</i></span></p>
+									<h1>ロドニー・フッド：ユタ・ジャズを改善する５つのトレードアイディア</h1>
+									<p>トレードされる可能性も高まってきたロドニー・フッド。2014年にドラフトされて以来、ヘイワードと同じく期待されてきた若きウィングはどこへ行くのか…。<span>By <i>リルタク</i></span></p>
 									<div class="more">
 										<a href="single.html" class="type-1">
 											<span> Read More </span>
@@ -109,63 +107,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li>
 								<div class="banner-info-slider">
 									<ul>
-										<li><a href="single.html">契約</a></li>
+										<li><a href="single.html">ユニフォーム</a></li>
 										<li>25 Dec 2015</li>
 									</ul>
-									<h1>magna perspiciatis unde omnis iste natus errors</h1>
-									<p>Dolore ipsum dolor sit amet, consectetur adipiscing elit, sed 
-										do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span>By <i>laborisman</i> and <i>Adom smithjos.</i></span></p>
-									<div class="more">
-										<a href="single.html" class="type-1">
-											<span> Read More </span>
-											<span> Read More </span>
-										</a>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info-slider">
-									<ul>
-										<li><a href="single.html">sports</a></li>
-										<li>25 Dec 2015</li>
-									</ul>
-									<h1>Sed ut perspiciatis unde omnis iste natus errors</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-										do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span>By <i>ullamcoman</i> and <i>Micheal smithjos.</i></span></p>
-									<div class="more">
-										<a href="single.html" class="type-1">
-											<span> Read More </span>
-											<span> Read More </span>
-										</a>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info-slider">
-									<ul>
-										<li><a href="single.html">general</a></li>
-										<li>25 Dec 2015</li>
-									</ul>
-									<h1>Sed ut perspiciatis unde omnis iste natus errors</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-										do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span>By <i>ullamcoman</i> and <i>Micheal smithjos.</i></span></p>
-									<div class="more">
-										<a href="single.html" class="type-1">
-											<span> Read More </span>
-											<span> Read More </span>
-										</a>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info-slider">
-									<ul>
-										<li><a href="single.html">international</a></li>
-										<li>25 Dec 2015</li>
-									</ul>
-									<h1>Sed ut perspiciatis unde omnis iste natus errors</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-										do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span>By <i>ullamcoman</i> and <i>Micheal smithjos.</i></span></p>
+									<h1>ユタ・ジャズがCity Jerseyを発表！</h1>
+									<p>各フランチャイズの街を代表するユニフォームとしてデザインされた"City Jersey"。ユタ・ジャズのCity Jerseyを紹介！<span>By <i>laborisman</i> and <i>Adom smithjos.</i></span></p>
 									<div class="more">
 										<a href="single.html" class="type-1">
 											<span> Read More </span>
