--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 					  </button>
 						<div class="logo">
-							<a class="navbar-brand" href="index.html"><span>邪</span> Jazz Nation Japan Central</a>
+							<a class="navbar-brand" href="index.html"><!--<span>邪</span>--> Jazz Nation Japan Central</a>
 						</div>
 					</div>
 
@@ -342,11 +342,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 				</div>
-				<div class="clearfix"> </div>
-			</div> -->
+				<div class="clearfix"> </div> -->
+			</div>
 			<div class="move-text">
-				<div class="速報！">
-					<h2>Breaking News</h2>
+				<div class="breaking_news">
+					<h2>速報！</h2>
 				</div>
 				<div class="marquee">
 					<div class="marquee1"><a class="breaking" href="single.html">オールスターリザーブ・ダンクコンテスト参加者が発表！ドノバン・ミッチェルはダンクコンテストに入れず！</a></div>
@@ -369,11 +369,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span> </span>
 							</a>
 							<div class="video-grid-pos">
-								<h3><span>Hurricanes</span> produce storm surges, tornadoes, and often the most deadly of all -inland flooding.</h3>
+								<h3>Why Donovan Mitchell is the Next Dwyane Wade</h3>
 								<ul>
-									<li>9:32 <label>|</label></li>
-									<li><i>Adom Smith</i> <label>|</label></li>
-									<li><span>Politics</span></li>
+									<li>4:05 <label>|</label></li>
+									<li><i>By Any Means Basketball </i> <label>|</label></li>
+									<li><span>YouTube</span></li>
 								</ul>
 							</div>
 
@@ -383,7 +383,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
 								<!--//pop-up-box -->
 								<div id="small-dialog" class="mfp-hide">
-									<iframe src="https://player.vimeo.com/video/145787219" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/3GWHiZYopDk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
 
 								<script>
